[gd_scene load_steps=6 format=3 uid="uid://c66lldqedf65l"]

[ext_resource type="Script" path="res://Nodes/AbacabaNode/abacaba_node.gd" id="1_cviq4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wdv6c"]
albedo_color = Color(0.811765, 0.403922, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_kg7q8"]
material = SubResource("StandardMaterial3D_wdv6c")

[sub_resource type="BoxShape3D" id="BoxShape3D_8ykl3"]
size = Vector3(1.1, 1.1, 1.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_h3e2w"]
size = Vector3(0.75, 0.75, 1)

[node name="AbacabaNode" type="Node3D"]
script = ExtResource("1_cviq4")

[node name="BoxMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_kg7q8")

[node name="MouseCollision" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MouseCollision"]
shape = SubResource("BoxShape3D_8ykl3")

[node name="FirstWord" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.5, 1)
billboard = 1
no_depth_test = true
text = "A"
font_size = 128

[node name="FirstWordCollision" type="Area3D" parent="FirstWord"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="FirstWord/FirstWordCollision"]
shape = SubResource("BoxShape3D_h3e2w")

[node name="SecondWord" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.5, 1)
billboard = 1
no_depth_test = true
text = "A"
font_size = 128

[node name="SecondWordCollision" type="Area3D" parent="SecondWord"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SecondWord/SecondWordCollision"]
shape = SubResource("BoxShape3D_h3e2w")

[node name="CreatureSprite" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
pixel_size = 0.003
billboard = 1

[connection signal="mouse_entered" from="MouseCollision" to="." method="_on_mouse_collision_mouse_entered"]
[connection signal="mouse_exited" from="MouseCollision" to="." method="_on_mouse_collision_mouse_exited"]
[connection signal="input_event" from="FirstWord/FirstWordCollision" to="." method="_on_first_word_collision_input_event"]
[connection signal="input_event" from="SecondWord/SecondWordCollision" to="." method="_on_second_word_collision_input_event"]
